blockwildcard/assets/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockWildCardVerb
metadata:
  name: block-wildcard-verb
spec:
  match:
    kinds:
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["Role","ClusterRole"]
